css contrast fixes (por fin)

--- a/estilo/estilo.css
+++ b/estilo/estilo.css
@@ -10,20 +10,24 @@ body {
 
 /* 0,0,1 */
 header {
-    /*background-color: #196719;*/
-    background-color: #000000;
-    color: transparent;
+    background-color: #196719;
+    color: #ffffff;
     padding-bottom: 0.5em;
     padding-left: 0.5em;
     padding-right: 0.5em;
     padding-top: 0em;
 }
 
+/* 0,0,2 */
 header a {
     text-decoration: none;
     color: #ffffff;
-    background-color: #000000;
-    /*background-color: #196719;*/
+    background-color: #196719;
+}
+
+/* 0,0,2 */
+nav a {
+    margin-right: 0.5em;
 }
 
 /* 0,0,1 */
@@ -32,6 +36,7 @@ h2, h3, h4, h5, h6 {
     background-color: transparent;
 }
 
+/* 0,0,1 */
 a {
     color: #196719;
     background-color: transparent;
